--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bRuTozzZ B1O</title>
+    <title>bRuTozzZ BIO</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Comfortaa">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -12,7 +12,7 @@
     <meta content="BRUTOZZ Bio" property="og:title" />
     <meta content="Bio Site Of @brutoozz" property="og:description" />
     <meta content="localhost" property="og:url" />
-    <meta content="https://i.postimg.cc/Vkbnwdtp/IMG-20250105-141147-084.jpg" property="og:image" />
+    <meta content="https://i.postimg.cc/3xZx6Bzv/photo-2025-03-26-12-04-00.jpg" property="og:image" />
     <meta content="#000000" data-react-helmet="true" name="theme-color" />
 
     <style>
